KNewFileMenu: fix creating new dir with name starting with ':'

QDir::isAbsolutePath(":foo") will return true since ':' at the beginning
denotes a QResource, which will make by QDir/QFileInfo consider it "not
relative, so it's absolute"...

BUG: 425396
FIXED-IN: 5.75