src/filewidgets/knewfilemenu.cpp
@@ -834,7 +834,9 @@ void KNewFileMenuPrivate::_k_slotCreateDirectory()
     QString name = expandTilde(m_text);
 
     if (!name.isEmpty()) {
-        if (QDir::isAbsolutePath(name)) {
+        // QDir::isAbsolutePath(":foo") will return true since ':' at the beginning
+        // denotes a QResource and QDir/QFileInfo will consider it "not relative"...
+        if (!name.startsWith(QLatin1Char(':')) && QDir::isAbsolutePath(name)) {
             url = QUrl::fromLocalFile(name);
         } else {
             if (name == QLatin1Char('.') || name == QLatin1String("..")) {
